# jira-commit-comments

./: .gitignore  pyproject.toml
src/: cli.py  git_extractor.py  git_interpreter.py  git_loader.py  jira_commenter.py
tests/: test_cli.py  test_git_extractor.py  test_git_interpreter.py
